# SS3LProject

SS3LAnalysis/: CMakeLists.txt  Ntuple_version.txt  README  initialize.sh  setupframework.sh
SS3LAnalysis/Root/: MyxAODAnalysis.cxx
SS3LAnalysis/SS3LAnalysis/: CMakeLists.txt  README
SS3LAnalysis/SS3LAnalysis/Root/: MyxAODAnalysis.cxx
SS3LAnalysis/SS3LAnalysis/SS3LAnalysis/: CutClass.h  MyxAODAnalysis.h  chargeflip.h
SS3LAnalysis/SS3LAnalysis/data/: SS3L_Default.conf
SS3LAnalysis/SS3LAnalysis/data/GRL/: Lumi.txt
SS3LAnalysis/SS3LAnalysis/data/PRW/: physics_25ns_Triggerno17e33prim.actualMu.OflLumi-13TeV-010.root  pileup_mc16a_dsid410080.root
SS3LAnalysis/SS3LAnalysis/scripts/: Run.py
SS3LAnalysis/scripts/: Run.py
SS3LDev/: CMakeLists.txt  README  initialize.sh  setup.sh  setupframework.sh
SS3LDev/AddXsecBranch/: CMakeLists.txt
SS3LDev/AddXsecBranch/share/: addxsecbranch.py
SS3LDev/AddXsecBranch/util/: AddVariables.cxx  AddXsecBranch.cxx
SS3LDev/DiLepton/: CMakeLists.txt  ChangeLog  README
SS3LDev/DiLepton/DiLepton/: DiLepton.h
SS3LDev/DiLepton/Root/: DiLepton.cxx  LinkDef.h
SS3LDev/DiLepton/cmt/: Makefile.RootCore
SS3LDev/DiLepton/data/: SS3L_Default.conf  ST_DiLepton.conf
SS3LDev/DiLepton/data/PileupReweighting/: merged_prw_mc16a_latest.root
SS3LDev/DiLepton/plotter/: AnaTree.cxx  AnaTree.h  DiLeptonPlotter.cxx  DiLeptonPlotter.h  DiLeptonTree_SRall.C  DiLeptonTree_SRall.h  SimpleComparer.C  compareFlavors.C  compare_SR.C  copyTree.C  plotCL.C  plotMC.C  plotMCError.C  runMeffSpectra.C  runPlots.C  significance.C
SS3LDev/DiLepton/scripts/: SRTableTex.py  crosssection.py  launch_PRW.sh  launch_jobs.py  plotSR.py  run.py  runPeriods.py  setup.sh
SS3LDev/DiLepton/scripts/crosssections/: MGPy8EG_A14N_BB_onestepC1_*_*_*_SS2L_table.txt  MGPy8EG_A14N_GG_ttn1_*__table.txt  MadGraphPythia8EvtGen_A14N_GG_2stepWZ_*_table.txt  PowhergPythia8EvtGen_CT10_AZNLO_table.txt  PromptSS.txt
SS3LDev/DiLepton/scripts/datasets/: 2stepWZ.dq2  DPS.dq2  Gtt.dq2  Wjets.dq2  bb1step.dq2  bkgSS.dq2  boostedW.dq2  data.dq2  gsl.dq2  nuhm2.dq2  pMSSM_DM.dq2  rpv.dq2  rpvLQD.dq2  signalsAll.dq2  tt2stepTN2.dq2  ttbar.dq2
SS3LDev/Utils/: MergeDataset.py  cpRPV.py  hadd_files.py  launch_jobs.py  makeList.py  rescale_lumi.py  run.py  runTrigger.py  sort.py
SubmitDir/: List_MC16a.txt  List_MC16c.txt  List_MC16d.txt  Sample_Availability.txt  Samples.txt  Submit_Data15_Rel21.py  Submit_Data16_Rel21.py  Submit_Data17_Rel21.py  Submit_MC16a_3and4tSM.py  Submit_MC16a_MultiBoson.py  Submit_MC16a_RareMore.py  Submit_MC16a_SUSY.py  Submit_MC16a_TTV.py  Submit_MC16a_VH.py  Submit_MC16a_Vjets.py  Submit_MC16a_ttBar.py  Submit_MC16a_ttH.py  Submit_MC16d_3and4tSM.py  Submit_MC16d_MultiBoson.py  Submit_MC16d_RareMore.py  Submit_MC16d_SUSY.py  Submit_MC16d_TTV.py  Submit_MC16d_VH.py  Submit_MC16d_Vjets.py  Submit_MC16d_ttBar.py  Submit_MC16d_ttH.py  Submit_MC_newISOWPs.py  Submit_MC_short.py  submit_all.sh
